--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Mapa</title>
-    <base href="/" />
+    <base href="/cvnl-mapa/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png" />
     <script src="https://unpkg.com/@googlemaps/markerclustererplus/dist/index.min.js"></script>
